--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,26 @@
-appdirs==1.4.3
-apturl==0.5.2
-bcrypt==3.1.7
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
-charset-normalizer==3.3.2
-chrome-gnome-shell==0.0.0
 click==8.1.7
 cloudpickle==3.1.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-cycler==0.10.0
+contourpy==1.1.1
+cycler==0.12.1
 dask==2023.5.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.0
-distro==1.4.0
-distro-info==0.23+ubuntu1.1
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-filelock==3.0.12
+fonttools==4.55.3
 fsspec==2024.10.0
-future==0.18.2
-httplib2==0.14.0
-idna==2.8
 importlib-metadata==8.5.0
-keyring==18.0.1
-kiwisolver==1.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
+importlib-resources==6.4.5
+kiwisolver==1.4.7
 locket==1.0.0
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-matplotlib==3.1.2
-monotonic==1.5
-more-itertools==4.2.0
-netifaces==0.10.4
+matplotlib==3.7.5
 numpy==1.24.4
-oauthlib==3.1.0
-olefile==0.46
 packaging==24.2
 pandas==2.0.3
-paramiko==2.6.0
 partd==1.4.1
-pexpect==4.6.0
-Pillow==7.0.0
-Pivy==0.6.5
-powerline-status==2.7
-protobuf==3.6.1
-psutil==5.5.1
-psycopg2-binary==2.9.3
+pillow==10.4.0
 pyarrow==17.0.0
-pycairo==1.16.2
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-pyRFC3339==1.1
-python-apt==2.0.1+ubuntu0.20.4.1
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
-python-debian==0.1.36+ubuntu1.1
-python-xlib==0.23
-pytz==2024.1
-pyxdg==0.26
-PyYAML==5.3.1
-relational==3.0
-reportlab==3.5.34
-requests==2.31.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-sodapy==2.2.0
-ssh-import-id==5.10
-systemd-python==234
+pytz==2024.2
+PyYAML==6.0.2
+six==1.17.0
 toolz==1.0.0
-typedload==1.20
-tzdata==2024.1
-ubuntu-advantage-tools==27.12
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.0.17
-wadllib==1.3.3
-xkit==0.0.0
+tzdata==2024.2
 zipp==3.20.2
